--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,26 @@
 * {
-    background-color: #060613;
-    margin: 0;
-    padding: 0;
+  background-color: #060613;
+  margin: 0;
+  padding: 0;
+}
+
+@font-face {
+  font-family: "Catamaran";
+  src: url("../fonts/Catamaran-VariableFont_wght.ttf");
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 95%;
+  background: none;
+  color: white;
+  background: none;
+  z-index: 2;
+}
+
+.slider-container {
+  position: relative;
+  z-index: 1;
 }
