--- a/src/components/Slider.css
+++ b/src/components/Slider.css
@@ -5,13 +5,13 @@
 
 .sliderText {
   position: absolute;
-  top: 12vw;
+  top: 14vw;
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
   z-index: 1;
   background: none;
-  width: 40%;
+  width: 40.5%;
 }
 
 .sliderText h4,
@@ -21,13 +21,14 @@
 }
 
 .sliderText h4 {
-  font-size: 2.5vw;
+  font-size: 2.3vw;
   font-family: "Catamaran", Helvetica;
 }
 
 .sliderText p {
-  font-size: 1.4vw;
+  font-size: 1.3vw;
   font-family: "Catamaran", Helvetica;
+  margin-top: 0.5vw;
 }
 
 .slider {
