--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,13 +16,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 38%;
+  width: 35%;
   background: none;
 }
 
 .leftHeader img {
-  width: 6vw;
-  height: 3vw;
+  width: 5.5vw;
+  height: 2.7vw;
   margin-right: 0;
   background: none;
 }
@@ -32,28 +32,31 @@ header {
 }
 
 .leftHeader p {
-  margin-top: 0.3vw;
+  margin-top: 0.2vw;
   color: #ffffff;
   font-family: "Catamaran", Helvetica;
   font-weight: bold;
-  font-size: 0.95vw;
+  font-size: 0.8vw;
   cursor: pointer;
   background: none;
+}
+
+.leftHeader p:hover {
+  color: #00ffa1;
 }
 
 .rightHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 0.5vh;
-  width: 27%;
+  width: 25%;
   background: none;
 }
 
 .suscribeButton {
-  padding: 0.2vw 0.8vw;
+  padding: 0.5vw 0.8vw;
   font-weight: bolder;
-  font-size: 0.9vw;
+  font-size: 0.8vw;
   font-family: "Catamaran", Helvetica;
   background-color: #00ffa1;
   border: none;
@@ -62,9 +65,9 @@ header {
 }
 
 .sesionButton {
-  padding: 0.2vw 0.8vw;
+  padding: 0.4vw 0.8vw;
   font-weight: bolder;
-  font-size: 0.9vw;
+  font-size: 0.8vw;
   font-family: "Catamaran", Helvetica;
   color: #ffffff;
   border-radius: 5px;
@@ -79,4 +82,5 @@ header {
   margin-right: 7vw;
   cursor: pointer;
   background: none;
+  margin-top: 0.5vh;
 }
